[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Notes/Sprites/pergaminho1.png" type="Texture" id=1]
[ext_resource path="res://scenes/Notes/Note.gd" type="Script" id=2]
[ext_resource path="res://scenes/Notes/ComicNeue-Italic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Notes/Sprites/pergaminho4.png" type="Texture" id=4]
[ext_resource path="res://assets/Notes/Sprites/pergaminho2.png" type="Texture" id=5]
[ext_resource path="res://assets/Notes/Sprites/pergaminho3.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 4.5 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 12
outline_color = Color( 1, 0.960784, 0.960784, 1 )
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": false,
"name": "NoteOpening",
"speed": 6.0
} ]

[node name="Note" type="Area2D"]
position = Vector2( 86, 58 )
script = ExtResource( 2 )

[node name="ClosedNote" type="Sprite" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( 0.005, 0.005 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 7.5 )
shape = SubResource( 3 )

[node name="Texto" type="Node2D" parent="."]
z_index = 3

[node name="Label" type="Label" parent="Texto"]
margin_left = -60.0
margin_top = -40.0
margin_right = 5794.0
margin_bottom = 1491.0
rect_scale = Vector2( 0.0702851, 0.0719653 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "
Nota 1:  Pergaminho na parede
“Mandado de Prisão: 16587
  Data: 04 de Junho de ….
  Nome: Rupert Grint
  Acusação: Rupert Grint está sendo 
acusado por traição e conspiração 
contra a realeza de Grindemor. Tais 
ações não serão toleradas.
Sentença: Decapitação em praça pública.
Assinado: General Grievous
Glória a nação e ao 
reinado de Ultred”"

[node name="Pressione" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Pressione"]
margin_left = -25.0
margin_top = -15.0
margin_right = 21.0
margin_bottom = -1.0
custom_colors/font_color = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Aperte E"

[node name="OpeningNote" type="AnimatedSprite" parent="."]
position = Vector2( 6, 36 )
scale = Vector2( 0.05, 0.05 )
z_index = 2
frames = SubResource( 5 )
animation = "NoteOpening"
frame = 1

[connection signal="body_entered" from="." to="." method="_on_MessageBox_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_MessageBox_body_exited"]
[connection signal="animation_finished" from="OpeningNote" to="." method="_on_OpeningNote_animation_finished"]
[connection signal="frame_changed" from="OpeningNote" to="." method="_on_OpeningNote_frame_changed"]
